adding Hermes Scrap

--- a/first big scrap.ipynb
+++ b/first big scrap.ipynb
@@ -391,211 +391,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 150,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Position</th>\n",
-       "      <th>link</th>\n",
-       "      <th>Company</th>\n",
-       "      <th>Department</th>\n",
-       "      <th>Location</th>\n",
-       "      <th>desc</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Regulatory Site Officer External Supply QA</td>\n",
-       "      <td>/emploi/waltham/regulatory-site-officer-extern...</td>\n",
-       "      <td>Sanofi</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>Waltham, Massachusetts</td>\n",
-       "      <td>POSITION OVERVIEWRegulatory Site Officer Exter...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>HSE Analyst</td>\n",
-       "      <td>/emploi/ocoyoacac/hse-analyst/20874/18068424</td>\n",
-       "      <td>Sanofi</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>Ocoyoacac, Mexique</td>\n",
-       "      <td>ANALISTA DE HSEOCOYOACACSanofi es uno de los p...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Maintenance Technician - Vaccine</td>\n",
-       "      <td>/emploi/east-swiftwater/maintenance-technician...</td>\n",
-       "      <td>Sanofi</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>Swiftwater, PA - Lieux Multiples</td>\n",
-       "      <td>POSITION OVERVIEW:Work Shift: This is a 2nd sh...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Medical Science Liaison - Hematologic Oncology...</td>\n",
-       "      <td>/emploi/chicago/medical-science-liaison-hemato...</td>\n",
-       "      <td>Sanofi</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>Chicago, Illinois</td>\n",
-       "      <td>The Mission of Sanofi’s MSL Team and the  Medi...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Quality Control Manager</td>\n",
-       "      <td>/emploi/waltham/quality-control-manager/20874/...</td>\n",
-       "      <td>Sanofi</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>Waltham, Massachusetts</td>\n",
-       "      <td>External Supply Quality Control Manager(CLO ov...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1518</th>\n",
-       "      <td>Japan Project Head</td>\n",
-       "      <td>/emploi/tokyo/japan-project-head/20874/15669824</td>\n",
-       "      <td>Sanofi</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>Tokyo, Japon</td>\n",
-       "      <td>■Responsibilities :Japan Project Lead (called ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1519</th>\n",
-       "      <td>Business Initiatives &amp; Partnering Specialist -...</td>\n",
-       "      <td>/emploi/istanbul/business-initiatives-and-part...</td>\n",
-       "      <td>Sanofi</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>Turquie</td>\n",
-       "      <td>iMove, the Sanofi VIE Program, is available to...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1520</th>\n",
-       "      <td>Postdoctoral Fellowship: Quantitative Systems ...</td>\n",
-       "      <td>/emploi/bridgewater/postdoctoral-fellowship-qu...</td>\n",
-       "      <td>Sanofi</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>Bridgewater, New Jersey</td>\n",
-       "      <td>Discover your future…Sanofi R&amp;D works with pas...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1521</th>\n",
-       "      <td>Chemical Technician</td>\n",
-       "      <td>/emploi/singapour/chemical-technician/20874/89...</td>\n",
-       "      <td>Sanofi</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>Singapour</td>\n",
-       "      <td>JOB PURPOSEAs a member of the production shift...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1522</th>\n",
-       "      <td>Postdoctoral Fellowship: Type 2 Inflammation a...</td>\n",
-       "      <td>/emploi/cambridge/postdoctoral-fellowship-type...</td>\n",
-       "      <td>Sanofi</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>Cambridge, Massachusetts</td>\n",
-       "      <td>Job overview: The goal for this position is to...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1523 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                               Position  \\\n",
-       "0            Regulatory Site Officer External Supply QA   \n",
-       "1                                           HSE Analyst   \n",
-       "2                      Maintenance Technician - Vaccine   \n",
-       "3     Medical Science Liaison - Hematologic Oncology...   \n",
-       "4                               Quality Control Manager   \n",
-       "...                                                 ...   \n",
-       "1518                                 Japan Project Head   \n",
-       "1519  Business Initiatives & Partnering Specialist -...   \n",
-       "1520  Postdoctoral Fellowship: Quantitative Systems ...   \n",
-       "1521                                Chemical Technician   \n",
-       "1522  Postdoctoral Fellowship: Type 2 Inflammation a...   \n",
-       "\n",
-       "                                                   link Company Department  \\\n",
-       "0     /emploi/waltham/regulatory-site-officer-extern...  Sanofi        N/A   \n",
-       "1          /emploi/ocoyoacac/hse-analyst/20874/18068424  Sanofi        N/A   \n",
-       "2     /emploi/east-swiftwater/maintenance-technician...  Sanofi        N/A   \n",
-       "3     /emploi/chicago/medical-science-liaison-hemato...  Sanofi        N/A   \n",
-       "4     /emploi/waltham/quality-control-manager/20874/...  Sanofi        N/A   \n",
-       "...                                                 ...     ...        ...   \n",
-       "1518    /emploi/tokyo/japan-project-head/20874/15669824  Sanofi        N/A   \n",
-       "1519  /emploi/istanbul/business-initiatives-and-part...  Sanofi        N/A   \n",
-       "1520  /emploi/bridgewater/postdoctoral-fellowship-qu...  Sanofi        N/A   \n",
-       "1521  /emploi/singapour/chemical-technician/20874/89...  Sanofi        N/A   \n",
-       "1522  /emploi/cambridge/postdoctoral-fellowship-type...  Sanofi        N/A   \n",
-       "\n",
-       "                              Location  \\\n",
-       "0               Waltham, Massachusetts   \n",
-       "1                   Ocoyoacac, Mexique   \n",
-       "2     Swiftwater, PA - Lieux Multiples   \n",
-       "3                    Chicago, Illinois   \n",
-       "4               Waltham, Massachusetts   \n",
-       "...                                ...   \n",
-       "1518                      Tokyo, Japon   \n",
-       "1519                           Turquie   \n",
-       "1520           Bridgewater, New Jersey   \n",
-       "1521                         Singapour   \n",
-       "1522          Cambridge, Massachusetts   \n",
-       "\n",
-       "                                                   desc  \n",
-       "0     POSITION OVERVIEWRegulatory Site Officer Exter...  \n",
-       "1     ANALISTA DE HSEOCOYOACACSanofi es uno de los p...  \n",
-       "2     POSITION OVERVIEW:Work Shift: This is a 2nd sh...  \n",
-       "3     The Mission of Sanofi’s MSL Team and the  Medi...  \n",
-       "4     External Supply Quality Control Manager(CLO ov...  \n",
-       "...                                                 ...  \n",
-       "1518  ■Responsibilities :Japan Project Lead (called ...  \n",
-       "1519  iMove, the Sanofi VIE Program, is available to...  \n",
-       "1520  Discover your future…Sanofi R&D works with pas...  \n",
-       "1521  JOB PURPOSEAs a member of the production shift...  \n",
-       "1522  Job overview: The goal for this position is to...  \n",
-       "\n",
-       "[1523 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 149,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sanofi_db_copy"
+    "# Hermes\n",
+    "\n",
+    "browser = webdriver.Chrome('/Users/maxime_alain/Downloads/chromedriver')\n",
+    "\n",
+    "browser.get('https://talents.hermes.com/fr/')\n",
+    "soup = BeautifulSoup(browser.page_source,'lxml')\n",
+    "\n",
+    "hermes_db = []\n",
+    "\n",
+    "for x in soup.find_all('div', class_='card-block'):\n",
+    "                row_scrap = []\n",
+    "                job_title = x.find('h2', attrs={'class' : 'offer-description bd-highlight block-with-text'}).text.replace('\\n', '').strip()\n",
+    "                job_link = x.find('a')['href']\n",
+    "                company = \"Hermes\"\n",
+    "                departement = 'N/A'\n",
+    "                details = []\n",
+    "                for v in x.find('ul', attrs={'class' : 'offer-list_info'}).find_all('li'): \n",
+    "                    item = [v.text]\n",
+    "                    details.append(item)\n",
+    "                \n",
+    "                #details.append(details_item)\n",
+    "\n",
+    "                row_scrap.append(job_title)\n",
+    "                row_scrap.append(job_link)\n",
+    "                row_scrap.append(company)\n",
+    "                row_scrap.append(departement)\n",
+    "                row_scrap.append(details)\n",
+    "\n",
+    "                hermes_db.append(row_scrap)\n",
+    "                \n",
+    "hermes_db = pd.DataFrame(hermes_db)\n",
+    "hermes_db = hermes_db.rename(columns={0 : \"Position\", 1 : \"link\", 2 : \"Company\", 3 : \"Department\", 4 : \"Location\"}) #\n",
+    "hermes_db_copy = hermes_db\n",
+    "hermes_db_copy['desc'] = ''\n",
+    "\n",
+    "i = 0\n",
+    "while i <= len(hermes_db_copy)-1:\n",
+    "    browser.get('https://talents.hermes.com/' + hermes_db_copy['link'][i])\n",
+    "    soup = BeautifulSoup(browser.page_source,'lxml')\n",
+    "    try :\n",
+    "        hermes_db_copy['desc'][i] = soup.find('div', attrs={'class' : 'ats-description'}).text\n",
+    "    except :\n",
+    "        hermes_db_copy['desc'][i] = ''\n",
+    "    i = i + 1\n",
+    "\n",
+    "hermes_db_copy.to_csv('backup/hermes_db.csv')\n",
+    "hermes_db_copy.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -679,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
