update NLP with data

--- a/NLP for Job offers.ipynb
+++ b/NLP for Job offers.ipynb
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -256,9 +256,7 @@
    ],
    "source": [
     "text = str(df.iloc[0:1]['desc'])\n",
-    "text = text.replace('\\xa0', '')\n",
-    "text = text.replace('\\\\n', ' ')\n",
-    "text = text.replace('[ ]{2,} ', '')\n",
+    "text = text.replace('\\xa0', '').replace('\\\\n', ' ').replace('[ ]{1,} ', '')\n",
     "print(text) #Create test sample"
    ]
   },
@@ -304,10 +302,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Chaque',\n",
+       " 'pièce',\n",
+       " 'issue',\n",
+       " 'de',\n",
+       " \"l'atelier\",\n",
+       " 'parisien',\n",
+       " 'de',\n",
+       " 'Monsieur',\n",
+       " 'Alaïa',\n",
+       " 'est',\n",
+       " 'unique',\n",
+       " ',',\n",
+       " 'confectionnée',\n",
+       " 'avec',\n",
+       " 'passion',\n",
+       " 'dans',\n",
+       " 'un',\n",
+       " 'pur',\n",
+       " 'savoir-faire',\n",
+       " 'traditionnel',\n",
+       " '.']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.word_tokenize(sentences[1])"
+   ]
   },
   {
    "cell_type": "code",
